<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<!-- This is parent redstone pom.xml -->

	<groupId>io.ffreedom</groupId>
	<artifactId>redstone</artifactId>
	<version>0.1</version>

	<packaging>pom</packaging>
	<name>redstone</name>

	<url>https://github.com/yellow013/redstone.git</url>

	<modules>
		<module>core</module>
		<module>engine</module>
		<module>adaptor</module>
		<module>strategy</module>
		<module>launch</module>
		<module>persistence-avro</module>
		<module>persistence-json</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<ec.version>9.2.0</ec.version>
		<polaris.version>0.1</polaris.version>
		<commons.version>1.0-SNAPSHOT</commons.version>
		<transport.version>1.0-SNAPSHOT</transport.version>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- <dependency>
			<groupId>com.sun.java</groupId>
			<artifactId>tools</artifactId>
			<version>1.8</version>
			<scope>system</scope>
			<systemPath>${JAVA_HOME}/lib/tools.jar</systemPath>
		</dependency> -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<!-- commons -->
		<!-- see https://github.com/yellow013/commons.git -->
		<dependency>
			<groupId>io.ffreedom</groupId>
			<artifactId>commons</artifactId>
			<version>${commons.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.collections</groupId>
			<artifactId>eclipse-collections-api</artifactId>
			<version>${ec.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.collections</groupId>
			<artifactId>eclipse-collections</artifactId>
			<version>${ec.version}</version>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<!-- commons -->
			<!-- see https://github.com/yellow013/commons.git -->
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>transport-core</artifactId>
				<version>${transport.version}</version>
			</dependency>
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>transport-rabbitmq</artifactId>
				<version>${transport.version}</version>
			</dependency>
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>transport-socket</artifactId>
				<version>${transport.version}</version>
			</dependency>
			<!-- polaris -->
			<!-- see https://github.com/yellow013/polaris.git -->
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>polaris</artifactId>
				<version>${polaris.version}</version>
			</dependency>
			<!-- redstone -->
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>engine</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>adaptor</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>strategy</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>persistence-json</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>io.ffreedom</groupId>
				<artifactId>persistence-avro</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>
